Fix too long names issue

--- a/core/src/styles/overrides.scss
+++ b/core/src/styles/overrides.scss
@@ -188,3 +188,7 @@ input[type='checkbox'] {
   text-transform: none;
   margin: 3px;
 }
+
+td {
+  word-break: break-word;
+}
